Added privacy Policy to the website and added Social Media Links

--- a/features.html
+++ b/features.html
@@ -190,20 +190,20 @@
         </div>
         <!-- Text Section 2 -->
         <div
-          class="hidden md:block absolute bottom-12 md:bottom-28 left-6 md:left-32"
+          class="block absolute bottom-12 md:bottom-28 left-4 md:left-32"
         >
-          <h2 class="text-white text-xl md:text-3xl font-bold league-spartan">
+          <h2 class="text-white text-2xl md:text-3xl font-bold league-spartan">
             Three components make up the<br class="hidden md:block" />
             complete product:
           </h2>
           <div class="flex flex-col pt-4 md:pt-6">
-            <p class="text-white text-sm md:text-xl">
+            <p class="text-white text-md md:text-xl">
               1. Recyclable lightweight container pod
             </p>
-            <p class="text-white text-sm md:text-xl">
+            <p class="text-white text-md md:text-xl">
               2. Gentle and hypoallergenic cleansing solution
             </p>
-            <p class="text-white text-sm md:text-xl">
+            <p class="text-white text-md md:text-xl">
               3. Biodegradable compressed cellulose cloth wipe
             </p>
           </div>
@@ -240,7 +240,7 @@
           </h1>
           <div data-aos="fade-right" data-aos-duration="700">
             <p
-              class="text-base md:text-xl pt-6 md:pt-10 font-['League Spartan']"
+              class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan"
             >
               The container pod is a two-chamber system. The cleansing solution
               is held in the outer chamber. The inner chamber contains a
@@ -248,7 +248,7 @@
               from each other until activated for use. 
             </p>
             <p
-              class="text-base md:text-xl pt-6 md:pt-10 font-['League Spartan']"
+              class="text-[20px] md:text-xl pt-6 md:pt-10 league-spartan"
             >
               When pressure is applied to the middle of the top of the pod, by
               thumb or finger, the container opens the valve at the bottom and
@@ -275,7 +275,7 @@
           <h1
             class="text-white text-[40px] md:text-[78px] concert-one-regular font-medium"
           >
-            How to Use
+            How to use
           </h1>
           <h1
             class="text-[#97CAEB] text-[40px] md:text-[78px] concert-one-regular font-medium"
@@ -294,7 +294,7 @@
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB] transition-colors duration-300"
             ></div>
           </div>
-          <p class="text-base md:text-xl text-white">
+          <p class="text-xl text-white league-spartan font-bold">
             Place the Wicked Wipes pod on the table. The product is made up of
             two parts - the dry compressed cloth hand wipe and the gentle
             cleansing formulation. The hand wipe is kept dry to maintain
@@ -384,7 +384,7 @@
         </div>
         <!-- Step 4 -->
         <div class="flex items-center w-1/2 hidden" id="detail-4">
-          <p class="border-2 border-white text-white text-xl p-6 rounded-xl">
+          <p class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold">
             Simply wipe your hands with the soft, yet sturdy, cloth to remove
             dirt and germs. Experience the immediate cleansing action and feel
             confident in reducing the spread of viruses and bacteria. Enjoy the
@@ -409,14 +409,14 @@
           ></div>
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-2">
-          <p class="border-2 border-white text-white text-xl p-6 rounded-xl">
+          <p class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold">
             Press down on the centre of the pod to activate the process. This
             breaks the seal and allows the cleansing solution to soak into the
             dry cloth. Watch as it unfurl
           </p>
         </div>
         <div class="flex items-center w-1/2 hidden" id="detail-3">
-          <p class="border-2 border-white text-white text-xl p-6 rounded-xl">
+          <p class="border-2 border-white text-white text-xl p-6 rounded-xl league-spartan font-bold">
             Pause for just a few seconds to allow the cloth to completely absorb
             the cleansing solution. Now it’s ready to use. 
           </p>
@@ -640,7 +640,7 @@
         >
           <div class="w-full flex justify-between md:justify-start">
             <div
-              class="text-[28px] md:text-4xl text-[#3a50b3] font-bold md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
+              class="text-[28px] md:text-[40px] text-[#3a50b3] font-bold md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
             >
               <h2>Innovative</h2>
             </div>
@@ -699,9 +699,9 @@
           </div>
           <div class="hidden md:w-full md:flex justify-end">
             <div
-              class="text-[28px] md:text-4xl text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-40 w-40 md:h-56 md:w-56 flex justify-end items-center slide-in-up text-right"
+              class="text-[28px] md:text-[40px] text-nowrap text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-40 w-40 md:h-56 md:w-56 flex justify-end items-center slide-in-up text-right"
             >
-              <h2>Skin-safe <br />Cleaning Solution</h2>
+              <h2>Skin-safe <br> Cleaning Solution</h2>
             </div>
           </div>
         </div>
@@ -711,7 +711,7 @@
         >
           <div class="w-full flex justify-center md:justify-start">
             <div
-              class="text-[28px] md:text-4xl text-[#3a50b3] font-bold md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
+              class="text-[28px] text-[40px] text-[#3a50b3] font-bold md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
             >
               <h2>Environmentally Friendly</h2>
             </div>
@@ -739,7 +739,7 @@
         >
           <div class="bg-[#97CAEB] h-20 w-20 rounded-full"></div>
           <div
-            class="text-[28px] md:text-4xl text-[#3a50b3] font-bold h-40 w-40 flex justify-end slide-in-up text-right text-nowrap"
+            class="text-[28px] md:text-[40px] text-[#3a50b3] font-bold h-40 w-40 flex justify-end slide-in-up text-right text-nowrap"
           >
             <h2 class="">Natural <br />Fragrances</h2>
           </div>
@@ -778,7 +778,7 @@
           </div>
           <div class="w-full flex justify-between md:justify-end">
             <div
-              class="hidden text-2xl md:text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-40 w-40 md:h-48 md:w-48 md:flex justify-center md:justify-end items-center text-center md:text-right"
+              class="hidden text-2xl md:text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-40 w-40 md:h-56 md:w-56 md:flex justify-center md:justify-end items-center text-center md:text-right"
             >
               <h2>Natural <br />Fragrances</h2>
             </div>
@@ -802,7 +802,7 @@
           <h1
             class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold"
           >
-            Get in Touch with Us!
+            Get in touch with us!
           </h1>
           <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
             to discuss your interest in Wicked Wipes
@@ -821,7 +821,9 @@
           <div class="w-full md:pt-10 flex gap-x-6">
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
-              <p class="text-white text-xs md:text-[16px] md:text-nowrap">
+              <p
+                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed"
+              >
                 <a
                   href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
                   >2030 Bristol Circle, Suite 210,<br />
@@ -909,9 +911,12 @@
               form="contactForm"
               class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
-              Let's Connect
+              Let's connect
             </button>
           </div>
+          <a href="privacy-policy.html">
+            <p class="text-right text-lg p-4">Privacy Policy</p>
+          </a>
         </div>
       </div>
     </section>
@@ -945,7 +950,6 @@
           />
           <nav class="w-full flex">
             <ul class="flex flex-col gap-y-1">
-              <li><a href="index.html" class="text-white">Wicked Wipes</a></li>
               <li><a href="features.html" class="text-white">Features</a></li>
               <li>
                 <a href="private-label.html" class="text-white"
@@ -966,7 +970,12 @@
             <img src="./public/Fb.svg" class="size-7" alt="fb" />
             <img src="./public/Instagram.svg" class="size-7" alt="fb" />
             <img src="./public/Dribbble.svg" class="size-7" alt="fb" />
-            <img src="./public/LinkedIn.svg" class="size-7" alt="fb" />
+            <img
+              src="./public/LinkedIn.svg"
+              class="size-7"
+              alt="fb"
+              id="linkedInImage"
+            />
           </div>
         </div>
       </div>
@@ -1059,6 +1068,14 @@
           menuDrawer.classList.add("translate-x-full");
         }
       });
+    </script>
+    <script>
+      // Social Media Links
+      document
+        .getElementById("linkedInImage")
+        .addEventListener("click", function () {
+          window.location.href = "https://www.linkedin.com/company/wicked-wipes/";
+        });
     </script>
     <script>
       const designSection = document.getElementById("design-section");
