--- a/private-label.html
+++ b/private-label.html
@@ -170,7 +170,7 @@
         <p
           class="text-lg md:text-2xl bg-white/80 rounded-[40px] px-6 py-8 md:px-10 md:py-16 font-medium"
         >
-          Wow your customers and build your brand’s recall value with our unique
+          Wow your customers and build your brand value with our unique
           hand wipes
         </p>
       </div>
@@ -184,7 +184,7 @@
         data-aos-duration="1000"
       >
         <h1 class="text-[48px] text-[#3A50B3] concert-one-regular font-medium">
-          One of a Kind
+          One of a kind
         </h1>
       </div>
       <div
@@ -205,7 +205,7 @@
         />
         <h2 class="text-xl text-[#3A50B3] text-center pt-10 font-medium">
           Being the only hand wipe of its kind elevates your business
-          immediately.
+          immediately
         </h2>
       </div>
     </section>
@@ -228,7 +228,7 @@
             <div
               class="text-base md:text-xl bg-blue-300 rounded-full p-6 md:p-8 w-full slide-in-left"
             >
-              When your guests press the centre of the pod they will experience
+              When your guests press the center of the pod, they will experience
               the fun and surprise effect of watching the cloth rise up and
               unfurl.
             </div>
@@ -349,7 +349,7 @@
           <h1
             class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold"
           >
-            Get in Touch with Us!
+            Get in touch with us!
           </h1>
           <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
             to discuss your interest in Wicked Wipes
@@ -368,7 +368,7 @@
           <div class="w-full md:pt-10 flex gap-x-6">
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
-              <p class="text-white text-xs md:text-[16px] md:text-nowrap">
+              <p class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed">
                 <a
                   href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
                   >2030 Bristol Circle, Suite 210,<br />
@@ -456,9 +456,12 @@
               form="contactForm"
               class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
-              Let's Connect
+              Let's connect
             </button>
           </div>
+          <a href="privacy-policy.html">
+            <p class="text-right text-lg p-4">Privacy Policy</p>
+          </a>
         </div>
       </div>
     </section>
@@ -492,7 +495,6 @@
           />
           <nav class="w-full flex">
             <ul class="flex flex-col gap-y-1">
-              <li><a href="index.html" class="text-white">Wicked Wipes</a></li>
               <li><a href="features.html" class="text-white">Features</a></li>
               <li>
                 <a href="private-label.html" class="text-white"
@@ -513,7 +515,7 @@
             <img src="./public/Fb.svg" class="size-7" alt="fb" />
             <img src="./public/Instagram.svg" class="size-7" alt="fb" />
             <img src="./public/Dribbble.svg" class="size-7" alt="fb" />
-            <img src="./public/LinkedIn.svg" class="size-7" alt="fb" />
+            <img src="./public/LinkedIn.svg" class="size-7" alt="fb" id="linkedInImage"/>
           </div>
         </div>
       </div>
@@ -549,6 +551,14 @@
         textarea.value = textarea.value.replace(/https?:\/\/[^\s]+/g, "");
       }
     </script>
+        <script>
+          // Social Media Links
+          document
+            .getElementById("linkedInImage")
+            .addEventListener("click", function () {
+              window.location.href = "https://www.linkedin.com/company/wicked-wipes/";
+            });
+        </script>
     <script>
       $(document).ready(function () {
         $("#contactForm").on("submit", function (e) {
