--- a/testimonials.html
+++ b/testimonials.html
@@ -144,8 +144,8 @@
           founding company, Beatus Concepts Inc. Beatus (pronounced beahtus)
           means ”blessed” in Latin and as the founding members, we feel blessed
           to be working together as friends and business partners. We also feel
-          blessed to be able to offer a high quality, healthful product to
-          customers in the hospitality industry across Canada.
+          blessed to be able to offer a high quality, healthful product that
+          promotes better living.
         </p>
       </div>
       <div
@@ -247,7 +247,7 @@
           <h1
             class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold"
           >
-            Get in Touch with Us!
+            Get in touch with us!
           </h1>
           <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
             to discuss your interest in Wicked Wipes
@@ -266,7 +266,9 @@
           <div class="w-full md:pt-10 flex gap-x-6">
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
-              <p class="text-white text-xs md:text-[16px] md:text-nowrap">
+              <p
+                class="text-white text-xs md:text-[16px] md:text-nowrap leading-relaxed"
+              >
                 <a
                   href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
                   >2030 Bristol Circle, Suite 210,<br />
@@ -354,9 +356,12 @@
               form="contactForm"
               class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
             >
-              Let's Connect
+              Let's connect
             </button>
           </div>
+          <a href="privacy-policy.html">
+            <p class="text-right text-lg p-4">Privacy Policy</p>
+          </a>
         </div>
       </div>
     </section>
@@ -390,7 +395,6 @@
           />
           <nav class="w-full flex">
             <ul class="flex flex-wrap md:flex-col gap-x-6 md:gap-y-1">
-              <li><a href="index.html" class="text-white">Wicked Wipes</a></li>
               <li><a href="features.html" class="text-white">Features</a></li>
               <li>
                 <a href="private-label.html" class="text-white"
@@ -411,12 +415,26 @@
             <img src="./public/Fb.svg" class="size-7" alt="fb" />
             <img src="./public/Instagram.svg" class="size-7" alt="fb" />
             <img src="./public/Dribbble.svg" class="size-7" alt="fb" />
-            <img src="./public/LinkedIn.svg" class="size-7" alt="fb" />
+            <img
+              src="./public/LinkedIn.svg"
+              class="size-7"
+              alt="fb"
+              id="linkedInImage"
+            />
           </div>
         </div>
       </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      // Social Media Links
+      document
+        .getElementById("linkedInImage")
+        .addEventListener("click", function () {
+          window.location.href =
+            "https://www.linkedin.com/company/wicked-wipes/";
+        });
+    </script>
     <script>
       // Remove Links Function
       function removeLinks(textarea) {
