Added Missing Social Media Links

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -90,11 +90,11 @@
       >
         <img src="/public/blue-fb.svg" class="w-6 md:w-7" alt="Facebook" />
         <img src="/public/blue-insta.svg" class="w-6 md:w-7" alt="Instagram" />
-        <img
+        <a href="https://www.linkedin.com/company/wicked-wipes/"><img
           src="/public/blue-linkedin.svg"
           class="w-6 md:w-7"
           alt="LinkedIn"
-        />
+        /></a>
       </div>
 
       <!-- Mobile Drawer (hidden by default) -->
