--- a/testimonials.html
+++ b/testimonials.html
@@ -129,7 +129,13 @@
       <div class="flex justify-end gap-7 items-center w-full">
         <img src="./public/facebook.svg" class="size-7" alt="fb" />
         <img src="./public/Insta.svg" class="size-7" alt="fb" />
-        <img src="./public/linkedin-social.svg" class="size-7" alt="fb" />
+        <a href="https://www.linkedin.com/company/wicked-wipes/">
+          <img
+            src="./public/linkedin-social.svg"
+            class="size-7"
+            alt="linkedin"
+          />
+        </a>
       </div>
       <div class="flex flex-col w-full mt-96 pt-20">
         <h1
