removed sensitive keys and passwords

--- a/features.html
+++ b/features.html
@@ -901,7 +901,7 @@
             <div class="flex justify-end w-full mt-10">
               <div
                 class="g-recaptcha"
-                data-sitekey="6LeK3DAqAAAAABPUmnvuJCf7ZUQwRq27KDavibFx"
+                data-sitekey=""
               ></div>
             </div>
           </form>
