--- a/private-label.html
+++ b/private-label.html
@@ -451,7 +451,7 @@
           <div class="flex justify-end w-full mt-10">
             <div
               class="g-recaptcha"
-              data-sitekey="6LeK3DAqAAAAABPUmnvuJCf7ZUQwRq27KDavibFx"
+              data-sitekey=""
             ></div>
           </div>
           <div class="w-full flex justify-end">
