--- a/testimonials.html
+++ b/testimonials.html
@@ -352,7 +352,7 @@
             <div class="flex justify-end w-full mt-10">
               <div
                 class="g-recaptcha"
-                data-sitekey=""
+                data-sitekey="6LeK3DAqAAAAABPUmnvuJCf7ZUQwRq27KDavibFx"
               ></div>
             </div>
           </form>
