Updated cosmetic changes

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -155,7 +155,7 @@
           information you provide us is used to fulfill your specific request.
           This information will also be used to send you product/service
           information, blogs, e-papers and promotional offers. Every marketing
-          email from Save On Brokerage contains instructions on how to opt out
+          email from Wicked Wipes contains instructions on how to opt out
           of receiving further marketing emails from the Company.
         </p>
         <h2 class="text-left text-2xl md:text-4xl league-spartan">
