--- a/private-label.html
+++ b/private-label.html
@@ -464,7 +464,7 @@
             </button>
           </div>
           <a href="privacy-policy.html">
-            <p class="text-right text-lg p-4">Privacy Policy</p>
+            <p class="text-right text-xl p-4">Privacy Policy</p>
           </a>
         </div>
       </div>
